fix input container width on mobile

--- a/src/components/NewNote.css
+++ b/src/components/NewNote.css
@@ -69,6 +69,6 @@ input{
 
 @media screen and (max-width:720px) {
   .input-container{
-    width:70vw;
+    width:78vw;
   }
 }
